--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 
 {
-    "name": "百年前新聞",
+    "name": "百年前新聞オンライン",
     "short_name": "百年前新聞",
     "start_url": "/",
     "display": "standalone",
